@@ -3,6 +3,10 @@ Release ...
   of repeated-character line drawing (troff "\l" and "\L"). The "graphics"
   option enables it per table, and the "-g" command line option enables it
   globally.
+* [nt]roff: The blank line macro is not called when a diversion is reread
+  in nofill mode anymore.
+* troff: The escape sequence "\s[0]" now resets the point size to the
+  previous value as "\s0" does.
 
 Release 060905
 * [nt]roff: The new ".brnl" request causes a break each time a newline is
